fixed error where modal was appearing behind main screen

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -1,7 +1,8 @@
 @import url('backgrounds.css');
-@import url('user/splash.css');
+@import url('user/splash.css'); 
 
 /* Serifa @font-face */
+
 
 @font-face {
         font-family: 'serifabefop-lightregular';
@@ -56,11 +57,8 @@
 
 .scroll-content, .list {
         background-color:rgba(255, 255, 255, 0.7);
-        z-index:  60;
 }
 
-.mmu-logo {position: fixed; bottom: 3%; margin-left: -44px; left: 50%;z-index: 0; opacity: .7  }
+.mmu-logo {position: fixed; bottom: 3%; margin-left: -44px; left: 50%; opacity: .7  }
 
 body {background: #ee8333;}
-
-
